--- a/refresher/basics/Strings Playground.ipynb
+++ b/refresher/basics/Strings Playground.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mystring = \"He said 'hello there' \";"
+    "mystring = \"He said 'hello there yo' \";"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "He said 'hello there' \n"
+      "He said 'hello there yo' \n"
      ]
     }
    ],
